show cheese but not movable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 # Create code from a list of Qt designer ui files
 set(CMAKE_AUTOUIC ON)
+# Create code from .qrc files
+set(CMAKE_AUTORCC on)
 
 # Find the QtWidgets library
 find_package(Qt5Widgets CONFIG REQUIRED)
@@ -16,7 +18,7 @@ include_directories(/usr/include/x86_64-linux-gnu/qt5)
 include_directories(./src)
 
 # Populate a CMake variable with the sources
-set(MAIN_SRCS main.cpp src/mainwindow.cpp src/mainwindow.ui src/cheeseview.cpp src/cheesecontroller.cpp src/cheesescene.cpp src/cheesemodel.cpp)
+set(MAIN_SRCS main.cpp src/mainwindow.ui src/mainwindow.qrc src/mainwindow.cpp src/cheeseview.cpp src/cheesecontroller.cpp src/cheesescene.cpp src/cheesemodel.cpp)
 # Tell CMake to create the cheese executable
 add_executable(cheese ${MAIN_SRCS})
 # Use the Widgets module from Qt 5
