add mode dialog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(/usr/include/x86_64-linux-gnu/qt5)
 include_directories(./src)
 
 # Populate a CMake variable with the sources
-set(MAIN_SRCS main.cpp src/mainwindow.ui src/mainwindow.qrc src/mainwindow.cpp src/cheeseview.cpp src/cheesecontroller.cpp src/cheesescene.cpp src/cheesemodel.cpp)
+set(MAIN_SRCS main.cpp src/mainwindow.qrc src/mainwindow.ui src/mainwindow.cpp src/modedialog.ui src/modedialog.cpp src/cheeseview.cpp src/cheesecontroller.cpp src/cheesescene.cpp src/cheesemodel.cpp)
 # Tell CMake to create the cheese executable
 add_executable(cheese ${MAIN_SRCS})
 # Use the Widgets module from Qt 5
