--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ set(CMAKE_AUTORCC on)
 find_package(Qt5Widgets CONFIG REQUIRED)
 # Find the QtNetwork library
 find_package(Qt5Network CONFIG REQUIRED)
+# Findn the QtMultimedia library
+find_package(Qt5Multimedia CONFIG REQUIRED)
 
 include_directories(/usr/include/x86_64-linux-gnu/qt5)
 include_directories(./src)
@@ -24,4 +26,4 @@ set(MAIN_SRCS main.cpp src/mainwindow.qrc src/mainwindow.ui src/mainwindow.cpp s
 # Tell CMake to create the cheese executable
 add_executable(cheese ${MAIN_SRCS})
 # Use the Widgets & Network module from Qt 5
-target_link_libraries(cheese Qt5::Widgets Qt5::Network)
+target_link_libraries(cheese Qt5::Widgets Qt5::Network Qt5::Multimedia)
